--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -534,11 +534,49 @@ year = {2010},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {atomic, consistent state, fault-tolerance, snapshot},
-} 
+}
 
 @inproceedings{clsm-poster,
 title ={Scaling Concurrent Log-Structured Data Stores},
-author = {Edward Bortnikov and Guy Golan-Gueta and Eshcar Hillel and Idit Keidar}, 
+author = {Edward Bortnikov and Guy Golan-Gueta and Eshcar Hillel and Idit Keidar},
 booktitle= {USENIX OSDI poster session},
 year= {2014}
+}
+
+@inproceedings{zyulkyarov2009atomic,
+  title={Atomic quake: using transactional memory in an interactive multiplayer game server},
+  author={Zyulkyarov, Ferad and Gajinov, Vladimir and Unsal, Osman S and Cristal, Adri{\'a}n and Ayguad{\'e}, Eduard and Harris, Tim and Valero, Mateo},
+  booktitle={ACM Sigplan Notices},
+  volume={44},
+  number={4},
+  pages={25--34},
+  year={2009},
+  organization={ACM}
+}
+
+
+
+
+@misc {jmonkey,
+title = {jMonkeyEngine: a 3D game engine for Java developers},
+howpublished= "\url{http://jmonkeyengine.org/}"
+}
+
+@inproceedings{FerroJKRY14,
+  author    = {Daniel G{\'{o}}mez Ferro and
+               Flavio Junqueira and
+               Ivan Kelly and
+               Benjamin Reed and
+               Maysam Yabandeh},
+  title     = {Omid: Lock-free transactional support for distributed data stores},
+  booktitle = {{IEEE} 30th International Conference on Data Engineering, Chicago,
+               {ICDE} 2014, IL, USA, March 31 - April 4, 2014},
+  year      = {2014},
+  pages     = {676--687},
+  crossref  = {DBLP:conf/icde/2014},
+  url       = {http://dx.doi.org/10.1109/ICDE.2014.6816691},
+  doi       = {10.1109/ICDE.2014.6816691},
+  timestamp = {Mon, 10 Nov 2014 12:56:15 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icde/FerroJKRY14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
