--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -24,7 +24,7 @@
 %--------------------------------------------------%
 
 \newcommand{\code}[1]{\textsf{#1}}
-\newcommand{\readV}{\code{read\_version}\xspace} 
+\newcommand{\readV}{\code{read\_version}\xspace}
 \newcommand{\readSet}{\code{read\_set}\xspace}
 \newcommand{\writeV}{\code{write\_version}\xspace}
 
@@ -32,21 +32,22 @@
 \newcommand{\reqII}{\textbf{LPR2}\xspace}
 
 %---------Evaluation Macros-----------------------%
-\newcommand{\autoTree}{Auto-Tree\xspace} 
-\newcommand{\autoTreap}{Auto-Treap\xspace} 
-\newcommand{\danaTree}{LO-Tree\xspace} 
+\newcommand{\autoTree}{Auto-Tree\xspace}
+\newcommand{\autoTreap}{Auto-Treap\xspace}
+\newcommand{\danaTree}{LO-Tree\xspace}
 \newcommand{\danaAVL}{LO-AVL\xspace}
 \newcommand{\bronson}{Snap-Tree\xspace}
 \newcommand{\skiplist}{Skip-List\xspace}
-\newcommand{\globalTree}{Lock-Tree\xspace} 
+\newcommand{\globalTree}{Lock-Tree\xspace}
 \newcommand{\globalTreap}{Lock-Treap\xspace}
-\newcommand{\domTree}{Domination-Tree\xspace} 
+\newcommand{\domTree}{Domination-Tree\xspace}
 \newcommand{\domTreap}{Domination-Treap\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
 
 
 %---------Comments -----------------------%
 \newcommand{\Idit}[1]{{\color{blue}{[\textbf{Idit:} #1 ]}}}
+\newcommand{\guy}[1]{{\color{red}{[\textbf{guy:} #1 ]}}}
 \newcommand{\eshcar}[1]{{\textcolor{violet}{\{{\bf eshcar:} \em #1\}}}}
 \newcommand{\maya}[1]{{\textcolor{magenta}{\{{\bf maya:} \em #1\}}}}
 \newcommand{\Xomit}[1]{}
