--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -580,3 +580,12 @@ howpublished= "\url{http://jmonkeyengine.org/}"
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icde/FerroJKRY14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@book{Nielson:1999,
+ author = {Nielson, Flemming and Nielson, Hanne R. and Hankin, Chris},
+ title = {Principles of Program Analysis},
+ year = {1999},
+ isbn = {3540654100},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+}
