--- a/Tex/src/introduction.tex
+++ b/Tex/src/introduction.tex
@@ -9,8 +9,8 @@ An important focal point for such efforts is scaling the concurrency of shared d
 %benefits in overall system performance~\cite{clsm-poster}.
 %It is therefore not surprising that many recent works have been dedicated to developing scalable concurrent data
 Many recent works have been dedicated to developing scalable concurrent data
-structures~\cite{ArbelA2014,DrachslerVY2014,NatarajanM2014,BrownER2014,CrainGR2013,BraginskyP2012,
-AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007,Michael:1996},
+structures (e.g.,~\cite{ArbelA2014,DrachslerVY2014,NatarajanM2014,BrownER2014,CrainGR2013,BraginskyP2012,
+AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007,fraser2004practical,Michael:1996}),
 some of which are widely used in real-world systems~\cite{Ohad:OOPSLA11}.
 
 % They are difficult to build and of resticted use
@@ -21,7 +21,7 @@ for example, the proofs of \cite{BraginskyP2012,EllenFRB2010} are $31$ and $20$ 
 respectively.
 The rationale behind dedicating so much effort to one data structure is that it is
 generic and can be used by many applications. Nevertheless,  systems often use data structures in unique ways
-that necessitate changing or extending their code (e.g.,\cite{levelDB,zyulkyarov2009atomic,jmonkey,Ohad:OOPSLA11}), which limits the usability of custom-tailored
+that necessitate changing or extending their code (e.g.,~\cite{levelDB,jmonkey,OhadThesis,zyulkyarov2009atomic}), which limits the usability of custom-tailored
 implementations. Hence, the return-on-investment for such endeavors may be suboptimal.
 Here, we propose an approach to facilitate this labor-intensive process by automatic means,
 making scalable synchronization more readily available.
@@ -51,7 +51,9 @@ pessimistically when too many conflicts occur, avoiding livelocks.
 %by the original code), since we can always fallback upon lock-based execution.
 
 % Properties of our transformation
-We show in Section~\ref{sec:proof} that our transformation preserves all essential properties of the original code: serializability, linearizability, and deadlock-freedom. In other words, if the original code is correct, so is the
+We show in Section~\ref{sec:proof} that our transformation preserves the external behaviour of the original lock-based code.
+%all essential properties of the original code: serializability, linearizability, and deadlock-freedom. 
+In other words, if the original code is correct (in the sense of serializability, linearizability, and deadlock-freedom), so is the
 transformed version. Moreover, the transformation
 %does not introduce any new accesses to shared data; in particular, it
 refrains from introducing a shared global clock (as used in some transactional memory systems~\cite{DBLP:conf/eurosys/ShalevS06}) or other
@@ -90,7 +92,7 @@ scalable parallelization of sequential code}.
 \subsection{Evaluation}
 In Section~\ref{sec:eval} we evaluate our transformation by generating three data structures-- an unbalanced search tree, a treap
 (randomized balanced search tree),
-and a skip list that supports range queries. We synthesize the first two from sequential implementations using domination locking~\cite{Gueta2011}, followed by our transformation.
+and a skip list that supports range queries. We automatically synthesize the first two from sequential implementations using domination locking~\cite{Gueta2011}, followed by our transformation.
 For the skip list, we manually add fine-grained locks (in a straightforward manner), and then apply our transformation.
 All examples are implemented in Java$^{\sc TM}$. We evaluate the scalability of the resulting code
 in a range of workload scenarios on a $32$-core machine.
@@ -99,21 +101,21 @@ their throughput remains flat as the number of running threads increases. In con
 is scalable, and its throughput continues to grow with the number of threads.
 
 We compare our synthesized code to state-of-the-art data structures
-that were hand-crafted by experts in the field and resulted in publications in
-leading venues~\cite{DrachslerVY2014,BronsonCCO2010}\guy{At this point, we may want to mention Java's ConcurrentSkipList.}. 
+that were hand-crafted by experts in the field~\cite{DrachslerVY2014,BronsonCCO2010,ConcurrentSkipList,fraser2004practical}.
+%and resulted in publications in leading venues~\cite{DrachslerVY2014,BronsonCCO2010}. 
 Our results show that the
 fully-automatically generated code for the search tree and treap
-achieves comparable (and in some cases, even superior) performance to that of
+achieves comparable performance to that of
 custom-tailored solutions.
 
 We also consider a data structure that supports range queries, which are required by
-many applications~\cite{levelDB,FerroJKRY14}. To this end we implement a skip list -- a data structure that naturally supports range queries.
-While range queries implemented using the iterators available in the Java$^{\sc TM}$ concurrency library's skip list~\cite{xxx} perform
+many applications (e.g.,~\cite{levelDB,FerroJKRY14}). To this end we implement a skip list -- a data structure that naturally supports range queries.
+While range queries implemented using the iterators available in the Java$^{\sc TM}$ concurrency library's skip list~\cite{ConcurrentSkipList} perform
 somewhat better than ones in our synthesized code, it is important to note that these iterators are \emph{not}
 linearizable (atomic), and only support so-called weak consistency, whereas range queries in our implementation are linearizable.
-The only previous linearizable implementation we are familiar with is due to Bronson et al.~\cite{BronsonCCO2010},
+A notable previous linearizable implementation is due to Bronson et al.~\cite{BronsonCCO2010},
 and it is significantly out-performed by our synthesized code. 
-\guy{what about Trevor Brown's paper }
+%
 This illustrates the benefit of the broad applicability
 of our automatic approach compared to specific custom-tailored implementations.
 
