--- a/Tex/src/related.tex
+++ b/Tex/src/related.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:related}
 \paragraph{Concurrent Data Structures}
 Many sophisticated concurrent data structures (e.g., \cite{ArbelA2014,DrachslerVY2014,NatarajanM2014,BrownER2014,CrainGR2013,BraginskyP2012,
-AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007,Michael:1996})
+AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007,fraser2004practical,Michael:1996})
 were developed and used in concurrent software systems~\cite{Ohad:OOPSLA11}.
 Implementing efficient synchronization for such data structures is considered a challenging and error-prone task~\cite{Ohad:OOPSLA11,Doh:SPAA04,Jin:2012}.
 As a result, concurrent data structures are manually implemented by concurrency experts.
@@ -13,7 +13,7 @@ of concurrently executing transactions~\cite{Weikum:2001,BHG:Book87}.
 Our approach can be seen as a way to extend many existing locking protocols by combining them with  optimistic concurrency control.
 In particular, our approach extends the following locking protocols:
 two-phase locking~\cite{Eswaran:1976}, tree locking~\cite{SilberschatzK1980}, DAG locking~\cite{CH:PODS95} and domination locking~\cite{Gueta2011}.
-We demonstrate the benefit of this combination by extending the  domination locking protocol to produce efficient concurrency control for
+We demonstrate the benefit of such combination by using the  domination locking protocol to produce efficient concurrency control for
 dynamic data structures.
 
 
@@ -23,7 +23,7 @@ Most   algorithms in the literature infer locks that follow the two-phase
 locking protocol~\cite{MZGB:POPL06,Emmi06POPL,gudka2012lock,CCG:PLDI08,HFP:TRANSACT06,CGE:CC08}.
 Our approach can potentially be used to optimized the synchronization produced by these algorithms.
 For example, for  algorithms that employ a two-phase variant in which all locks are acquired at the beginning of a transaction (e.g.,~\cite{gudka2012lock,CCG:PLDI08}),
-our approach can be used to defer the locking (e.g., to just before the first write operation) as well as to eliminate some of the locking operations.
+our approach may be used to defer the locking (e.g., to just before the first write operation) as well as to eliminate some of the locking operations.
 
 
 \paragraph{Transactional Memory}
@@ -41,10 +41,10 @@ In a sense, our approach can be seen as a specialized TM approach that can be pr
 %\paragraph{Lock Elision for Read-Only Transactions}
 \paragraph{Lock Elision}
 Our approach is inspired by the idea of \emph{sequential locks}~\cite{mckenneyParallel} and the approach presented in~\cite{Nakaike:2010}.
-But  in contrast to these works,  which are designed to handle read-only transactions,
-our approach handles read-only prefixes of transactions (operations) that update the shared memory. 
+But  in contrast to these approaches,  which are designed to handle read-only transactions,
+our approach handles read-only prefixes of transactions (operations) that update the shared memory.
 As shown in Section~\ref{sec:eval}, our approach is best suited for update-dominated workloads
-Moreover, using these approaches for a highly-contended data structure (as in Section~\ref{sec:eval}) is likely to provide limited performance, 
+Moreover, using these approaches for a highly-contended data structure (as in Section~\ref{sec:eval}) is likely to provide limited performance,
 because each update transaction causes many read-only transactions to abort.
 
 There are some transactional memory techniques to elide locks from arbitrary critical sections (e.g.,~\cite{Rajwar:2002:TLE:635508.605399,Roy:2009:RSS:1519065.1519094,Afek:2014:SHL:2611462.2611482}).
